--- a/Starfinder by Roll20/translations/zh.json
+++ b/Starfinder by Roll20/translations/zh.json
@@ -195,7 +195,7 @@
 	"damage-type": "傷害類型",
 	"crit-damage": "爆擊傷害",
 	"ammo": "彈藥",
-	"usage": "USAGE",
+	"usage": "用法",
 	"special": "特殊",
 	"additional-attack": "額外攻擊",
 	"roll-full-attack_": "使用全力攻擊: ",
@@ -345,11 +345,11 @@
 	"port (4)": "PORT (4)",
 	"aft (3)": "AFT (3)",
 	"1st-attack": "1st ATTACK",
-	"targets": "TARGETS",
+	"targets": "目標",
 	"full-effect:": "FULL EFFECT:",
 	"save": "SAVE",
 	"dc": "DC",
-	"save-effect:": "SAVE EFFECT:",
+	"save-effect:": "豁免效果:",
 	"notes:": "NOTES:",
 	"level": "等級 ",
 	"roll-crit": "ROLL CRITICAL EFFECT",
@@ -388,7 +388,7 @@
 	"caster-level_": "CASTER LEVEL ",
 	"power": "POWER",
 	"which-gunner": "Which Gunner",
-	"range": "RANGE",
+	"range": "射程",
 	"hexes": "HEXES",
 	"light": "LIGHT",
 	"heavy": "HEAVY WEAPON",
@@ -444,19 +444,19 @@
 	"spell-like abilities": "SPELL-LIKE ABILITIES",
 	"select range": "SELECT RANGE",
 	"dc-affected-by-buffs-to": "DC AFFECTED BY BUFFS TO",
-	"character-info-help-first-line": "This section stores all the basic information on your character. Most of these fields have no effect on the sheet itself, but there are two that do:",
-	"character-info-help-second-line": "<b>Class/Level:</b> is filled by the sheet as you enter your class(es) and level(s) in the class tab.",
-	"character-info-help-third-line": "<b>Race HP:</b> This is used by the sheet to calculate your hp and stores your racial starting hp.",
-	"class-info-help-first-line": "This section stores all the basic information on your class(es). The fields are organized into the following columns:",
-	"class-info-help-second-line": "<b>Name:</b> The name of the class. This is concatenated with level to create the class/level field in the character details screen.",
-	"class-info-help-third-line": "<b>Level:</b> The level of this class. In addition to affecting the class/level field, this is used to calculate much of your character's info from health to skills",
-	"class-info-help-fourth-line": "<b>Stamina Points:</b> How many stamina points the class grants at each level.",
-	"class-info-help-fifth-line": "<b>Hit Points:</b> How many hit points the class grants at each level.",
+	"character-info-help-first-line": "本節將存儲有關您的角色的所有基本信息。這些斷落中的大多數對角色表本身沒有影響，但是有兩個部分有影響:",
+	"character-info-help-second-line": "<b>職業/等級:</b> 本頁的職業和等級，將由職業表中的設定自動填充。",
+	"character-info-help-third-line": "<b>種族 HP:</b> 本頁使用它來計算您的 HP 並存儲您的種族起始 HP。",
+	"class-info-help-first-line": "本節儲存職業的所有基本信息。 這些部分被組織成以下各列:",
+	"class-info-help-second-line": "<b>名稱:</b> 職業的名稱。 這與等級連接到角色詳細信息中的職業/等級部分。",
+	"class-info-help-third-line": "<b>等級:</b> 職業的等級。 除了影響職業/等級部分外，還用於計算從健康到技能的大部分角色信息",
+	"class-info-help-fourth-line": "<b>耐力點(SP):</b> 這個職業在每個級別獲得多少耐力點。",
+	"class-info-help-fifth-line": "<b>生命值(HP):</b> 這個職業在每個級別獲得多少生命值。",
 	"class-info-help-sixth-line": "<b>Base Attack Bonus Progression:</b> The progression of the class' BAB. 1/2 BAB classes will have a bab of 0 at level 1 and 10 at level 20. 3/4 BAB classes will have a bab of 0 at level 1 and 15 at level 20. Full BAB (or 1) will have a BAB equal to their level.",
-	"class-info-help-seventh-line": "<b>Fortitude/Reflex/Will Save Progressions:</b> The progression of the saves. There are two progressions: Good, which starts at 2, and Poor which starts at 0.",
-	"class-info-help-eighth-line": "<b>Skills/Level:</b> The number of skill points your class grants each level, not counting intelligence bonus",
-	"class-info-help-ninth-line": "<b>Key Ability:</b> The class' key ability score",
-	"class-info-help-tenth-line": "<b>Spells Checkbox:</b> Checked if the class casts spells",
+	"class-info-help-seventh-line": "<b>強韌/反射/意志 豁免的級數:</b> 豁免的級數。 有兩個級數: 強, 從 2 開始、弱，從 0 開始。",
+	"class-info-help-eighth-line": "<b>技能/等級:</b> 不包括智力加值，你的職業在每一級所獲得的技能點數",
+	"class-info-help-ninth-line": "<b>關鍵屬性:</b> 職業的關鍵屬性",
+	"class-info-help-tenth-line": "<b>法術勾選框:</b> 如果職業可以施法則勾選",
 	"spellclass-info-help-first-line": "This section stores the details of all your spellcasting classes. A panel is created for each class that casts spells, and each panel has the following editable fields:",
 	"spellclass-info-help-second-line": "<b>Casting Ability:</b> The ability used to cast spells.",
 	"spellclass-info-help-third-line": "<b>Spell Progression:</b> How quickly the class gains new spell levels. Technomancer and Mystic are partial spell casters. Other progressions are included to support importing pathfinder classes.",
