--- a/MouseGuard/translations/ru.json
+++ b/MouseGuard/translations/ru.json
@@ -13,7 +13,7 @@
 	"SeniorArtisan": "Мастер ремесленник",
 	"Enemy": "Враг",
 	"Conditions": "Состояния",
-	"Healthy": "Healthy",
+	"Healthy": "Здоров",
 	"Angry": "Разозлённый",
 	"HungryThirsty": "Голод/жажда",
 	"Tired": "Усталый",
@@ -58,12 +58,9 @@
 	"WeatherWatcher": "Наблюдатель за погодой",
 	"Abilities": "Способности",
 	"GearItem": "Снаряжение/предмет",
-	"AngryNote": "-1 к диспозиции в любом кофликте, который основан на Воле.",
-	"HungryThirstyNote": "-1 к диспозиции в любом кофликте.",
-	"TiredNote": "-1 к диспозиции в любом кофликте.",
-	"InjuredNote": "-1К к навыкам, Природе, Воле и Здоровью (but not recovery).",
-	"SickNote": "-1К к навыкам, Природе, Воле и Здоровью (but not recovery).",
-	"BeliefNote": "Если ваш персонаж действует в соответствии со своим Убеждением, получите 1 балл судьбы.",
-	"GoalNote": "Достигнув Цели персонажа, получите 1 балл личности.",
-	"InstinctNote": "Если персонаж действовал в соответствии со своим Инстинктом, получите 1 балл судьбы."
+	"AngryNote": "-1 от диспозиции команды в любом конфликте, где используется «Воля».",
+	"HungryThirstyNote": "-1 от диспозиции команды в любом конфликте.",
+	"TiredNote": "-1 от диспозиции команды в любом конфликте.",
+	"InjuredNote": "-1К штраф при любых проверках кроме проверок способностей «Ресурсы» и «Связи», а так же проверок для восстановления.",
+	"SickNote": "-1К штраф при любых проверках кроме проверок способностей «Ресурсы» и «Связи», а так же проверок для восстановления.",
 }
