--- a/Starfinder by Roll20/translations/zu.json
+++ b/Starfinder by Roll20/translations/zu.json
@@ -539,5 +539,8 @@
 	"all-saves": "crwdns92258:0crwdne92258:0",
 	"melee weapon attacks": "crwdns105552:0crwdne105552:0",
 	"ranged weapon attacks": "crwdns105554:0crwdne105554:0",
-	"custom": "crwdns105556:0crwdne105556:0"
+	"custom": "crwdns105556:0crwdne105556:0",
+	"finish charmancer": "Congratulations on completing your character",
+	"final charactermancer step": "The last step is to choose whether to overwrite any existing data on this character, or update your existing character with your choices from the mancer.",
+	"final choice": "Pick a choice below"
 }
