--- a/The Sprawl/translations/ko.json
+++ b/The Sprawl/translations/ko.json
@@ -11,20 +11,20 @@
     "contacts": "연줄",
     "cool": "냉철",
     "cred": "크레드",
-    "crew-image": "crew image",
+    "crew-image": "이미지",
     "crews": "부하",
     "cyberdeck": "사이버덱",
-    "cyberdeck-image": "cyberdeck image",
+    "cyberdeck-image": "이미지",
     "cyberware": "사이버웨어",
-    "cyberware-image": "cyberware image",
+    "cyberware-image": "이미지",
     "design": "용도",
     "details": "상세",
     "dice": "주사위",
-    "directive": "Directive",
+    "directive": "행동수칙",
     "directives": "행동수칙",
     "disaster": "재난",
-    "drone-image": "drone image",
-    "drone-style": "스타일",
+    "drone-image": "이미지",
+    "drone-style": "기본형",
     "drones": "드론",
     "edge": "예리",
     "equipment": "장비",
@@ -32,23 +32,23 @@
     "eyes": "눈",
     "face": "얼굴",
     "fast-talk": "말재주 부리기",
-    "file-image": "file image",
+    "file-image": "이미지",
     "firewall": "방화벽",
     "forward": "보너스",
-    "frame": "기본형(혹은, 크기)",
-    "gang-image": "gang image",
+    "frame": "기본형/크기",
+    "gang-image": "이미지",
     "gangs": "무리",
     "gangs-and-crews": "무리와 부하",
-    "gear-image": "gear image",
+    "gear-image": "이미지",
     "hardening": "내구력",
     "harm": "피해",
     "harm-clock": "피해 시계",
     "harm-clock-t": "피해 시계",
-    "harm-suffered": "입은 대미지",
+    "harm-suffered": "입은 피해",
     "hit-the-street": "거리 나서기",
     "img-url": "IMG URL",
     "img-url-u": "IMG URL",
-    "intel-and-gear": "[정보] & [장비]",
+    "intel-and-gear": "장비와 첩보",
     "leader": "리더",
     "links": "유대",
     "looks": "외관",
@@ -60,12 +60,12 @@
     "name": "이름",
     "notes": "추가사항",
     "operator-file-u": "OPERATOR FILE",
-    "operator-name": "Operator name",
+    "operator-name": "이름",
     "other-equipment": "기타 장비",
     "play-hardball": "세게 나가기",
     "playbook": "플레이북",
     "processor": "처리속도",
-    "product-id": "Product ID",
+    "product-id": "장비 이름",
     "profile": "프로필",
     "profit": "이득",
     "program": "프로그램",
@@ -85,16 +85,16 @@
     "skin": "피부",
     "stealth": "은신",
     "strengths": "강점",
-    "style": "기본형",
+    "style": "스타일",
     "synth": "신스",
     "tags": "태그",
     "territory": "영역",
-    "time": "Time",
+    "time": "시간",
     "type": "종류",
     "use-cyberware": "사이버웨어 사용",
-    "user": "User",
+    "user": "사용자",
     "vehicle": "차량",
-    "vehicle-image": "vehicle image",
+    "vehicle-image": "이미지",
     "vehicles": "차량",
     "vehicles-and-drones": "차량과 드론",
     "weaknesses": "약점",
