--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -459,7 +459,7 @@
 	"dodge-per-level": "Esquive/niveau",
 	"wear-armor-per-level": "Port d'armure/niveau",
 	"initiative-per-level": "Initiative/niveau",
-	"life-points-per-level": "Points de vie/niveau",
+	"life-points-per-level": "PV/niveau",
 	"martial-knowledge-per-level": "DI/niveau",
 	"innate-psychic-points-per-level": "PPP/niveau",
 	"+1-PP/3-level": "+1 PPP/3 niveau",
