--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -457,14 +457,14 @@
 	"attack-per-level": "Attaque/niveau",
 	"block-per-level": "Parade/niveau",
 	"dodge-per-level": "Esquive/niveau",
-	"wear-armor-per-level": "Port d'armure/niveau",
+	"wear-armor-per-level": "P. d'Armure/niveau",
 	"initiative-per-level": "Initiative/niveau",
 	"life-points-per-level": "PV/niveau",
 	"martial-knowledge-per-level": "DI/niveau",
 	"innate-psychic-points-per-level": "PPP/niveau",
 	"+1-PP/3-level": "+1 PPP/3 niveau",
 	"+1-PP/2-level": "+1 PPP/2 niveau",
-	"+1-PP/1-level": "+1 PPp/1 niveau",
+	"+1-PP/1-level": "+1 PPP/1 niveau",
 	"zeon-per-level": "Zeon/niveau",							
 	"summon-per-level": "Convoquer/niveau",
 	"control-per-level": "Dominer/niveau",
