--- a/Shadowrun5thEdition/translations/fr.json
+++ b/Shadowrun5thEdition/translations/fr.json
@@ -15,11 +15,11 @@
     "animalhandling": "Dressage",
     "ap": "PA",
     "arcana": "Arcanes",
-    "archery": "Armes de trait",
+    "archery": "Tir à l’arc",
     "armor": "Armure",
     "armorer": "Armurier",
     "armorrating": "Indice d'armure",
-    "arms": "Armement",
+    "arms": "Bras",
     "artisan": "Artisan",
     "assensing": "Observation astrale",
     "astralcombat": "Combat Astral",
@@ -41,7 +41,7 @@
     "baseslider": "Curseur de base",
     "bf": "TR",
     "binding": "Lien d'esprits",
-    "biotechgroup": "Groupe Biotech",
+    "biotechgroup": "Groupe Biotechnologie",
     "biotechnology": "Biotechnologie",
     "blades": "Armes tranchantes",
     "body": "Corps",
@@ -119,7 +119,7 @@
     "escapeartist": "Évasion",
     "ess": "Ess",
     "essence": "Essence",
-    "ethnicity": "Ethnie",
+    "ethnicity": "Origine ethnique",
     "etiquette": "Étiquette",
     "exoticmelee": "Arme de mêlée exotique",
     "exoticnote": "Les armes exotiques ne sont pas liés aux compétences. Utilisez l'entrée modificateur de dé pour paramétrer les dés de compétences.",
@@ -129,13 +129,13 @@
     "fa": "TA",
     "fade": "Disparition",
     "fadevalue": "Valeur de Disparition",
-    "fakeid": "Faux SIN",
-    "fakeidsrelated": "Faux SINs, styles de vie, fonds et permis associés",
+    "fakeid": "Faux ID",
+    "fakeidsrelated": "Fausses ID, styles de vie, fonds et permis associés",
     "far": "Loin",
     "favor": "Faveur",
     "file": "Fichier",
     "fire": "Feu",
-    "firearms": "Groupe armes à feu",
+    "firearms": "Groupe d’armes à feu",
     "fireprotection": "Protection contre le feu",
     "firewall": "Pare-feu",
     "firstaid": "Premiers Soins",
@@ -152,7 +152,7 @@
     "gymnastics": "Gymnastique",
     "hacking": "Hacking",
     "hand": "Main",
-    "handling": "Maniabilité",
+    "handling": "Maniement",
     "handoff": "Main (Off)",
     "hardware": "Matériel électronique",
     "health": "Santé",
@@ -162,8 +162,8 @@
     "host_rating": "Host Rating",
     "i": "I",
     "ic": "CI",
-    "ic limit": "Limite de CI",
-    "idslifestylecurrency": "ID/Styles de vie/Argent",
+    "ic limit": "IC Limit",
+    "idslifestylecurrency": "IDs/Styles de vie/Monnaie",
     "illusion": "Illusion",
     "impersonation": "Imposture",
     "indirect": "Indirect",
@@ -194,8 +194,8 @@
     "locksmith": "Serrurerie",
     "logic": "Logique",
     "longarms": "Fusils",
-    "los": "CDV",
-    "los (a)": "CDV (Z)",
+    "los": "LDV",
+    "los (a)": "LOS (A)",
     "loyalty": "Loyauté",
     "m": "M",
     "magic": "Magie",
@@ -205,8 +205,8 @@
     "manipulation": "Manipulation",
     "martialarts": "Arts martiaux",
     "matrix": "Matrice",
-    "matrixdevice": "Appareil matriciel",
-    "matrixinit": "Init. matricielle",
+    "matrixdevice": "Appareil de la matrice",
+    "matrixinit": "Ini matricielle",
     "matrixinitiative": "Initiative Matricielle",
     "matrixsoak": "Encaissement matriciel",
     "medicine": "Médecine",
@@ -226,7 +226,7 @@
     "modifier": "Modificateur",
     "modifierdice": "Dé modificateur",
     "modifiers": "Modificateurs",
-    "movement": "Déplacement",
+    "movement": "Mouvement",
     "mundane": "Ordinaire",
     "n": "N",
     "name": "Nom",
@@ -237,7 +237,7 @@
     "negotiation": "Négociation",
     "none": "Aucun",
     "notes": "Notes",
-    "notoriety": "Rumeur",
+    "notoriety": "Notoriété",
     "nuyen": "Nuyen",
     "options": "Options",
     "other": "Autre",
@@ -245,9 +245,9 @@
     "overflow": "Surplus",
     "overflowmodifier": "Modificateur de Surplus",
     "p": "P",
-    "high pain tolerance": "Endurance à la douleur",
-    "low pain tolerance": "Sensibilité à la douleur",
-    "damage compensators": "Compensateur  de  dommages (P/E): ",
+    "high pain tolerance": "high pain tolerance",
+    "low pain tolerance": "low pain tolerance",
+    "damage compensators": "Damage Compensators (P/S): ",
     "paintolerance": "Tolérance à la douleur",
     "palming": "Escamotage",
     "pc": "PJ",
@@ -298,7 +298,7 @@
     "rc": "CR",
     "reach": "Allonge",
     "reaction": "Réaction",
-    "recoil": "CR",
+    "recoil": "Recul",
     "registering": "Inscription",
     "relatedlifestyle": "Styles de vies associés",
     "resonance": "Résonance",
@@ -339,7 +339,7 @@
     "sprite": "Sprite",
     "ss": "CC",
     "stealthgroup": "Groupe Furtivité",
-    "streetcred": "Réputation",
+    "streetcred": "Crédibilité",
     "strength": "Force",
     "stun": "Étourdissement",
     "stunbonus": "Bonus assomé",
@@ -348,10 +348,10 @@
     "submersion": "Submersion",
     "summoning": "Invocation",
     "survival": "Survie",
-    "sustained": "Maintenu",
+    "sustained": "Alimenté",
     "swimming": "Natation",
-    "t": "C",
-    "t (a)": "C (Z)",
+    "t": "T",
+    "t (a)": "T (A)",
     "target": "Cible",
     "taskinggroup": "Groupe Technomancie",
     "technicalskills": "Compétences techniques",
@@ -364,7 +364,7 @@
     "totalkarma": "Karma total",
     "tracking": "Pistage",
     "type": "Type",
-    "unarmedcombat": "Combat à mains nues",
+    "unarmedcombat": "Combat sans armes",
     "vehicle": "Véhicule",
     "vehicleskills": "Compétences de pilotage",
     "vehicleweapons": "Armement du Véhicule",
