--- a/Kids on Bikes Official/translations/es.json
+++ b/Kids on Bikes Official/translations/es.json
@@ -26,46 +26,46 @@
 	"WEALTHY": "ADINERADO",
 	"SKILLED AT:": "HABILIDOSO EN:",
 	"SKILLED AT DESCRIPTION": "SKILLED AT DESCRIPTION",
-	"ABSENT MINDED": "ABSENT MINDED",
-	"BLUNT": "BLUNT",
-	"BOASTFUL": "BOASTFUL",
-	"CLUMSY": "CLUMSY",
-	"CONCEITED": "CONCEITED",
-	"COWARDLY": "COWARDLY",
-	"DECEITFUL": "DECEITFUL",
-	"DEMANDING": "DEMANDING",
-	"DISLOYAL": "DISLOYAL",
-	"DISOBEDIENT": "DISOBEDIENT",
-	"DOGMATIC": "DOGMATIC",
-	"ENVIOUS": "ENVIOUS",
-	"FLIPPANT": "FLIPPANT",
-	"GLOOMY": "GLOOMY",
-	"GREEDY": "GREEDY",
-	"HOT-TEMPERED": "HOT-TEMPERED",
-	"IGNORANT": "IGNORANT",
-	"INCONSIDERATE": "INCONSIDERATE",
-	"INSECURE": "INSECURE",
-	"IRRATIONAL": "IRRATIONAL",
-	"NEUROTIC": "NEUROTIC",
-	"OBNOXIOUS": "OBNOXIOUS",
-	"PARANOID": "PARANOID",
-	"PATRONIZING": "PATRONIZING",
-	"PERVERSE": "PERVERSE",
-	"PETTY": "PETTY",
-	"PICKY": "PICKY",
-	"PREJUDICE": "PREJUDICE",
-	"PRIM": "PRIM",
-	"RECKLESS": "RECKLESS",
-	"RESENTFUL": "RESENTFUL",
-	"RESTLESS": "RESTLESS",
-	"RUDE": "RUDE",
-	"SECRETIVE": "SECRETIVE",
-	"SELF-CENTERED": "SELF-CENTERED",
-	"SELF-PITYING": "SELF-PITYING",
-	"SLOVENLY": "SLOVENLY",
-	"SUPERSTITIOUS": "SUPERSTITIOUS",
-	"VAIN": "VAIN",
-	"VINDICTIVE": "VINDICTIVE",
+	"ABSENT MINDED": "DISTRAÍDA/O",
+	"BLUNT": "OBTUSA/O",
+	"BOASTFUL": "PRESUMIDA/O",
+	"CLUMSY": "TORPE",
+	"CONCEITED": "ENGREÍDA/O",
+	"COWARDLY": "COBARDE",
+	"DECEITFUL": "ENGAÑOSA/O",
+	"DEMANDING": "EXIGENTE",
+	"DISLOYAL": "DESLEAL",
+	"DISOBEDIENT": "DESOBEDIENTE",
+	"DOGMATIC": "DOGMÁTICA/O",
+	"ENVIOUS": "ENVIDIOSA/O",
+	"FLIPPANT": "SUPERFICIAL",
+	"GLOOMY": "PESIMISTA",
+	"GREEDY": "AVARICIOSA/O",
+	"HOT-TEMPERED": "IRASCIBLE",
+	"IGNORANT": "IGNORANTE",
+	"INCONSIDERATE": "DESCONSIDERADA/O",
+	"INSECURE": "INSEGURA/O",
+	"IRRATIONAL": "IRRACIONAL",
+	"NEUROTIC": "NEURÓTICO",
+	"OBNOXIOUS": "REPUGNANTE",
+	"PARANOID": "PARANOICA/O",
+	"PATRONIZING": "CONDESCENDIENTE",
+	"PERVERSE": "PERVERSA/O",
+	"PETTY": "MEZQUINA/O",
+	"PICKY": "QUISQUILLOSA/O",
+	"PREJUDICE": "DISCRIMINATORIA/O",
+	"PRIM": "REMILGADA/O",
+	"RECKLESS": "IMPRUDENTE",
+	"RESENTFUL": "RESENTIDA/O",
+	"RESTLESS": "INQUIETA/O",
+	"RUDE": "GROSERA/O",
+	"SECRETIVE": "RESERVADA/O",
+	"SELF-CENTERED": "EGOISTA",
+	"SELF-PITYING": "AUTOCOMPASIVA/O",
+	"SLOVENLY": "DESALIÑADA/O",
+	"SUPERSTITIOUS": "SUPERSTICIOSA/O",
+	"VAIN": "VANA/O",
+	"VINDICTIVE": "VENGATIVA/O",
 	"Powers": "Poderes",
 	"Backpack": "Mochila",
 	"Notes": "Notas"
