--- a/Warhammer 4e Character Sheet/translations/es.json
+++ b/Warhammer 4e Character Sheet/translations/es.json
@@ -62,7 +62,7 @@
 	"BACKGROUND": "Trasfondo",
 	"RESILIENCE": "Resilencia",
 	"WEAPONS": "Armas",
-	"ARMOR": "Armadura",
+	"ARMOR": "Armad.",
 	"ARMOR-QUALITIES": "Cualidades de la armadura",
 	"SPELLBOOK": "Grimorio",
 	"APPERANCE": "Grimorio",
@@ -1031,7 +1031,7 @@
 	"MARK-SHADOW-9": "<b>Shrouded:</b> Your body draws shadows towards it. You gain a +10% bonus to Concealment Tests.",
 	"MARK-SHADOW-10": "<b>Mark of <i>Ulgu</i>:</b> The rune of <i>Ulgu</i> appears somewhere on your body (GM's choice). You gain a +10% bonus to Channelling checks when casting spells from the Lore of Shadow.",
 	"CHARACTERISTIC": "Característica",
-	"GNOME": "Gnome",
+	"GNOME": "Gnomo",
 	"DISPEL": "Dispel",
 	"EXPERIENCE_SPENDING_RECORD": "Registro de gastos de experiencia",
 	"HARDY": "Hardy",
