--- a/Shadowrun5thEdition/translations/fr.json
+++ b/Shadowrun5thEdition/translations/fr.json
@@ -15,11 +15,11 @@
     "animalhandling": "Dressage",
     "ap": "PA",
     "arcana": "Arcanes",
-    "archery": "Tir à l’arc",
+    "archery": "Armes de trait",
     "armor": "Armure",
     "armorer": "Armurier",
     "armorrating": "Indice d'armure",
-    "arms": "Bras",
+    "arms": "Armement",
     "artisan": "Artisan",
     "assensing": "Observation astrale",
     "astralcombat": "Combat Astral",
@@ -41,7 +41,7 @@
     "baseslider": "Curseur de base",
     "bf": "TR",
     "binding": "Lien d'esprits",
-    "biotechgroup": "Groupe Biotechnologie",
+    "biotechgroup": "Groupe Biotech",
     "biotechnology": "Biotechnologie",
     "blades": "Armes tranchantes",
     "body": "Corps",
@@ -67,7 +67,7 @@
     "conditionfooter": "Pour chaque 3 cases de dégâts sur n'importe quel moniteur de dégâts, le personnage prend un malus de -1 sur les tests; ces modificateurs sont cumulables au sein et entre les moniteurs de dégâts.",
     "conditionmonitor": "Moniteur de Condition",
     "conditionmonitorm": "Moniteur de Condition (M)",
-    "conditionmonitormodifiers": "Modificateurs de moniteur de condition (P/E) : ",
+    "conditionmonitormodifiers": "Modificateurs de moniteur de condition (P/E) : ",
     "conditionmonitorpm": "Moniteur de Condition (P/M)",
     "conditionmonitorps": "Moniteur de Condition (P/E)",
     "conjuring": "Conjuration",
@@ -119,7 +119,7 @@
     "escapeartist": "Évasion",
     "ess": "Ess",
     "essence": "Essence",
-    "ethnicity": "Origine ethnique",
+    "ethnicity": "Ethnie",
     "etiquette": "Étiquette",
     "exoticmelee": "Arme de mêlée exotique",
     "exoticnote": "Les armes exotiques ne sont pas liés aux compétences. Utilisez l'entrée modificateur de dé pour paramétrer les dés de compétences.",
@@ -129,13 +129,13 @@
     "fa": "TA",
     "fade": "Disparition",
     "fadevalue": "Valeur de Disparition",
-    "fakeid": "Faux ID",
-    "fakeidsrelated": "Fausses ID, styles de vie, fonds et permis associés",
+    "fakeid": "Faux SIN",
+    "fakeidsrelated": "Faux SINs, styles de vie, fonds et permis associés",
     "far": "Loin",
     "favor": "Faveur",
     "file": "Fichier",
     "fire": "Feu",
-    "firearms": "Groupe d’armes à feu",
+    "firearms": "Groupe armes à feu",
     "fireprotection": "Protection contre le feu",
     "firewall": "Pare-feu",
     "firstaid": "Premiers Soins",
@@ -152,7 +152,7 @@
     "gymnastics": "Gymnastique",
     "hacking": "Hacking",
     "hand": "Main",
-    "handling": "Maniement",
+    "handling": "Maniabilité",
     "handoff": "Main (Off)",
     "hardware": "Matériel électronique",
     "health": "Santé",
@@ -162,8 +162,8 @@
     "host_rating": "Host Rating",
     "i": "I",
     "ic": "CI",
-    "ic limit": "IC Limit",
-    "idslifestylecurrency": "IDs/Styles de vie/Monnaie",
+    "ic limit": "Limite de CI",
+    "idslifestylecurrency": "ID/Styles de vie/Argent",
     "illusion": "Illusion",
     "impersonation": "Imposture",
     "indirect": "Indirect",
@@ -194,8 +194,8 @@
     "locksmith": "Serrurerie",
     "logic": "Logique",
     "longarms": "Fusils",
-    "los": "LDV",
-    "los (a)": "LOS (A)",
+    "los": "CDV",
+    "los (a)": "CDV (Z)",
     "loyalty": "Loyauté",
     "m": "M",
     "magic": "Magie",
@@ -205,16 +205,16 @@
     "manipulation": "Manipulation",
     "martialarts": "Arts martiaux",
     "matrix": "Matrice",
-    "matrixdevice": "Appareil de la matrice",
-    "matrixinit": "Ini matricielle",
+    "matrixdevice": "Appareil matriciel",
+    "matrixinit": "Init. matricielle",
     "matrixinitiative": "Initiative Matricielle",
     "matrixsoak": "Encaissement matriciel",
     "medicine": "Médecine",
     "melee": "Mêlée",
     "memory": "Mémoire",
     "mental": "Mental",
-    "mental_limit": "Limite mentale ",
-    "mentallimit": "Limite mentale :",
+    "mental_limit": "Limite mentale ",
+    "mentallimit": "Limite mentale :",
     "metamagic": "Métamagie",
     "metatype": "Métatype",
     "misc": "Divers",
@@ -226,7 +226,7 @@
     "modifier": "Modificateur",
     "modifierdice": "Dé modificateur",
     "modifiers": "Modificateurs",
-    "movement": "Mouvement",
+    "movement": "Déplacement",
     "mundane": "Ordinaire",
     "n": "N",
     "name": "Nom",
@@ -237,7 +237,7 @@
     "negotiation": "Négociation",
     "none": "Aucun",
     "notes": "Notes",
-    "notoriety": "Notoriété",
+    "notoriety": "Rumeur",
     "nuyen": "Nuyen",
     "options": "Options",
     "other": "Autre",
@@ -245,9 +245,9 @@
     "overflow": "Surplus",
     "overflowmodifier": "Modificateur de Surplus",
     "p": "P",
-    "high pain tolerance": "high pain tolerance",
-    "low pain tolerance": "low pain tolerance",
-    "damage compensators": "Damage Compensators (P/S): ",
+    "high pain tolerance": "Endurance à la douleur",
+    "low pain tolerance": "Sensibilité à la douleur",
+    "damage compensators": "Compensateur  de  dommages (P/E): ",
     "paintolerance": "Tolérance à la douleur",
     "palming": "Escamotage",
     "pc": "PJ",
@@ -257,10 +257,10 @@
     "persona": "Persona",
     "personal": "Données personnelles",
     "physical": "Physique",
-    "physical_limit": "Limite physique ",
+    "physical_limit": "Limite physique ",
     "physicalbonus": "Bonus Physique",
     "physicaldamagetrack": "Moniteur de dégâts physiques",
-    "physicallimit": "Limite physique :",
+    "physicallimit": "Limite physique :",
     "physicalskills": "Compétences physiques",
     "pilot": "Autopilote",
     "pilotaerospace": "Appareils spatiaux",
@@ -298,7 +298,7 @@
     "rc": "CR",
     "reach": "Allonge",
     "reaction": "Réaction",
-    "recoil": "Recul",
+    "recoil": "CR",
     "registering": "Inscription",
     "relatedlifestyle": "Styles de vies associés",
     "resonance": "Résonance",
@@ -323,8 +323,8 @@
     "sneaking": "Discrétion",
     "soak": "Encaisser",
     "social": "Social",
-    "social_limit": "Limite sociale ",
-    "sociallimit": "Limite sociale : ",
+    "social_limit": "Limite sociale ",
+    "sociallimit": "Limite sociale : ",
     "socialskills": "Compétences sociales",
     "software": "Logiciels",
     "sorcery": "Sorcellerie",
@@ -339,7 +339,7 @@
     "sprite": "Sprite",
     "ss": "CC",
     "stealthgroup": "Groupe Furtivité",
-    "streetcred": "Crédibilité",
+    "streetcred": "Réputation",
     "strength": "Force",
     "stun": "Étourdissement",
     "stunbonus": "Bonus assomé",
@@ -348,10 +348,10 @@
     "submersion": "Submersion",
     "summoning": "Invocation",
     "survival": "Survie",
-    "sustained": "Alimenté",
+    "sustained": "Maintenu",
     "swimming": "Natation",
-    "t": "T",
-    "t (a)": "T (A)",
+    "t": "C",
+    "t (a)": "C (Z)",
     "target": "Cible",
     "taskinggroup": "Groupe Technomancie",
     "technicalskills": "Compétences techniques",
@@ -360,11 +360,11 @@
     "temporarymodifiers": "Modificateurs temporaires",
     "throwingweapons": "Armes de jet",
     "topps": "La Topps Company, Inc. a la propriété exclusive des noms, logos, illustrations, marques, photographies, sons, sons, audio, vidéo et/ou tout matériel exclusif utilisé en rapport avec le jeu Shadowrun. The Topps Company, Inc. a accordé la permission d'utiliser ces noms, logos, illustrations, marques et/ou tout matériel exclusif à des fins promotionnelles et informatives sur son site Web, mais n'endosse pas et n'est affilié à aucun titre officiel.",
-    "total": "Total ",
+    "total": "Total ",
     "totalkarma": "Karma total",
     "tracking": "Pistage",
     "type": "Type",
-    "unarmedcombat": "Combat sans armes",
+    "unarmedcombat": "Combat à mains nues",
     "vehicle": "Véhicule",
     "vehicleskills": "Compétences de pilotage",
     "vehicleweapons": "Armement du Véhicule",
