--- a/Warhammer-Fantasy-Roleplay-2nd-Edition/translations/pl.json
+++ b/Warhammer-Fantasy-Roleplay-2nd-Edition/translations/pl.json
@@ -235,7 +235,7 @@
 	"SPELL-DAMAGE": "Obrażenia od zaklęcia",
 	"SPELL-DESCRIPTION": "Opis zaklęcia",
 	"RITUAL": "Rytuał",
-	"INGREDIENTS": "Skłądniki",
+	"INGREDIENTS": "Składniki",
 	"RITUAL-DESCRIPTION": "Opis rytuału",
 	"ARCANE-LANGUAGE": "Język Tajemny (magiczny)",
 	"REQUIRED-MAGIC": "Wymagany poziom mocy",
