--- a/Cyberpunk Red/translations/en.json
+++ b/Cyberpunk Red/translations/en.json
@@ -32,6 +32,6 @@
     "enemies": "Enemies",
     "romance": "Romance",
     "personality": "Personality",
-    "gear": "Gear"
+    "gear": "Gear",
     "cyberware": "Cyberware"
 }
